--- a/charts/script-exporter/Chart.yaml
+++ b/charts/script-exporter/Chart.yaml
@@ -1,7 +1,9 @@
 ---
 apiVersion: v2
 name: script-exporter
-description: Prometheus exporter to execute scripts and collect metrics from the output or the exit status.
+description:
+  Prometheus exporter to execute scripts and collect metrics from the output or
+  the exit status.
 type: application
-version: 1.0.0
+version: 2.0.0
 appVersion: v2.24.0
