--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -35,3 +35,27 @@ jobs:
       - name: Build
         run: |
           make build
+
+  docker:
+    name: Docker
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker Image
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64
